# agent-spike

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.claude/: CHECKPOINT  CLAUDE.md  CLAUDE.md.backup  CLAUDE_CODE_DEVCONTAINER.md  GPG-SETUP.md  IMPORT_METADATA.md  MCP_SETUP.md  STATUS.md  SUGGESTED_NEXT.md  VALIDATION_REPORT.md  VISION.md  claude_config.devcontainer.json  development-philosophy.md  mcp.json  settings.local.json
.claude/ideas/: nested-agent-deadlock.md
.devcontainer/: .env  Makefile  devcontainer.json
.devcontainer/entrypoint.d/: 01-dotfiles-setup.sh  02-install-claude-code.sh  20-project-setup.sh
.githooks/: README.md  post-checkout  post-merge  pre-commit
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.instruction.md  copilot-prompts.instruction.md  copilot_customization.instructions.md  devcontainer.instructions.md  dockerfile.instructions.md  ignore-files.instructions.md  makefile.instructions.md  python.instructions.md  testing.instructions.md
.github/prompts/: check.prompt.md  commit.prompt.md  lint.prompt.md  test.prompt.md  update-instructions.prompt.md
.spec/: STATUS.md
api/: Dockerfile  main.py  models.py
api/routers/: cache.py  health.py  youtube.py
compose/: INFINITY_SETUP.md  __init__.py  alloy-config.alloy  demo_vector_search.py  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  test_infinity.py
compose/api/: Dockerfile  README.md  dev.sh  main.py  models.py
compose/cli/: CLAUDE.md  README.md  __init__.py  add_retroactive_metadata.py  backfill_embeddings.py  base.py  batch_ingest_youtube.py  check_metadata_format.py  delete_video.py  fast_reingest.py  fetch_channel_videos.py  filter_description_urls.py  ingest_video.py  ingest_youtube.py  list_videos.py  migrate_archive_to_minio.py  migrate_data.py  migrate_to_surrealdb.py  migrate_url_patterns.py  populate_surrealdb_from_archive.py  reingest_from_archive.py  reprocess_normalized_tags.py  reprocess_qdrant_metadata.py  search_by_reference.py  search_videos.py  simple_batch_ingest.py  sync_qdrant.py  update_video_metadata.py  url_filter_status.py  validate_migration.py  verify_updated_videos.py  verify_video.py
compose/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.js  svelte.config.js  vite.config.js
compose/lib/: config_manager.py  defaults.py  env_loader.py  logging_config.py  retry.py  telemetry.py
compose/mcp/: __init__.py  youtube_rag.py
compose/scripts/: migrate_to_admin.py
compose/services/: README.md  artifacts.py  backup.py  conversations.py  file_processor.py  imagegen.py  memory.py  notes.py  projects.py  sandbox.py  styles.py  vaults.py  websearch.py
compose/tests/: __init__.py  conftest.py  test_chat_client.py  test_chat_features.py  test_chat_websocket.py  test_chat_websocket_core.py  test_embedding_backfill.py  test_imagegen.py  test_imagegen_api.py  test_memory.py  test_memory_api.py  test_notes.py  test_retry.py  test_sandbox.py  test_sandbox_api.py  test_studio_api.py  test_styles.py  test_vault_service_issues.py  test_vaults.py  test_websearch.py  test_websearch_api.py
compose/tools/: README.md  analyze_youtube.py  check_titles.py  compare_models.py  list_gpt5_models.py  tag_videos.py  youtube_cache.py
compose/traefik/: dynamic.yml
compose/worker/: Dockerfile  __init__.py  backfill.py  embedding_backfill.py  queue_processor.py
docs/: OBSERVABILITY.md  STREAMING-ARCHITECTURE.md  SURREALDB-BACKUP.md
infra/ansible/: Dockerfile  README.md  ansible.cfg  docker-compose.yml
lessons/: __init__.py  lesson_base.py
lessons/lesson-001/: .gitignore  COMPLETE.md  DEPENDENCIES.md  README.md
lessons/lesson-002/: COMPLETE.md  PLAN.md  test_docling_integration.py
lessons/lesson-003/: COMPLETE.md  README.md  USAGE.md  test_coordinator_webpage.py  test_router.py
lessons/lesson-004/: COMPLETE.md  PLAN.md  README.md  test_observability.py
lessons/lesson-005/: COMPLETE.md  PLAN.md  README.md  test_guardrails.py
lessons/lesson-006/: COMPLETE.md  PLAN.md  README.md  test_memory_basics.py  test_memory_simple.py  test_single_client.py
lessons/lesson-007/: COMPLETE.md  HYBRID_REPL.md  INGEST_FAST.md  PLAN.md  README.md  REPL_USAGE.md  SCHEDULED_INGEST.md  export_qdrant_to_archive.py  hybrid_ingest_repl.py  ingest_repl.py  ingest_repl_fast.py  ingest_single_video.py  list_cached_videos.py  scheduled_ingest.py  test_archive.py  test_cache.py  test_qdrant_container.py  test_webpage_cache_integration.py  verify_cached_video.py
lessons/lesson-008/: COMPLETE.md  PLAN.md  README.md
lessons/lesson-009/: .env  .env.example  COMPLETE.md  PLAN.md  README.md  test_components.py  test_orchestrator.py  test_orchestrator_async.py  test_orchestrator_minimal.py  test_orchestrator_simple.py  test_orchestrator_toolless.py  test_subagent_direct.py
lessons/lesson-010/: COMPLETE.md  PLAN.md  README.md  archive_tag_analysis_report.md  test_retriever.py  test_vocabulary.py
lessons/lesson-011-video-rec/: README.md  cluster_personas.py  extract_brave_history.py  extract_takeout_history.py  generate_embeddings.py  import_history.py  import_service.py  inspect_clusters.py  merge_video_ids.py
lessons/shared/: README.md  __init__.py  env_loader.py
projects/: .gitignore
projects/brave_history/: analyze_youtube.py  check_titles.py  compare_models.py  copy_brave_history.py  list_gpt5_models.py  sync_brave_history.py  tag_videos.py  youtube_cache.py
projects/data/: nate_jones_videos_full.csv  sync_qdrant.py
projects/mentat/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
projects/video-lists/: .env.example  README.md  fetch_youtube_videos.py
scripts/: cache_youtube_transcript.py  setup-dev-tools.ps1  setup-git-crypt.ps1  setup-gpg-key.ps1  setup-whisper-writer.ps1  whisper-dictate.ahk
src/app/: cli.py
tests/cli/: test_populate_from_archive.py  test_validate_migration.py
tmp/: analyze-skills-temp.json  analyze_history.py
tools/: __init__.py
(+2724 files in other folders)
